--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -20,6 +20,8 @@ body {
 
 .App {
   height: 100vh;
+  /* display: flex; */
+  /* justify-content: center; */
 }
 
 .intro-container {
@@ -70,10 +72,10 @@ select {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  /* margin: auto; */
+  margin: auto;
   /* padding: 20px; */
   color: var(--honeydew);
-  /* max-width: 600px; */
+  max-width: 900px;
   height: 100%;
 }
 
@@ -120,7 +122,7 @@ select {
 
 .message-actions>form>input {
   background-color: var(--honeydew);
-  width: 85%;
+  width: calc(100% - 56px);
   padding: 20px 10px;
   border: none;
 }
@@ -130,7 +132,8 @@ select {
 }
 
 .message-actions>form>button {
-  width: 15%;
+  height: 56px;
+  width: 56px;
   padding: 0 5px;
   height: 100%;
   border: none;
